added body in style.css and changed font-family

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+body {font-family:arial;}
+
 h2 {font-size: 28px;}
-        h1 {font-size: 36px;}
-        span {color: grey;}
-        img {width: 150px; 
-            height: 150px;}
+
+h1 {font-size: 36px;}
+
+span {color: grey;}
+
+img {width: 150px; 
+    height: 150px;}
+
