--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {font-family:arial;}
+body {font-family:arial; background-color: aliceblue; padding: 40px 0;}
 
 h2 {font-size: 28px;}
 
@@ -8,4 +8,7 @@ span {color: grey;}
 
 img {width: 150px; 
     height: 150px;}
+
+section, header {padding: 10px 60px 20px 60px; background-color: white; width: 960px; margin: 0 auto;}
+
 
