--- a/style.css
+++ b/style.css
@@ -6,9 +6,15 @@ h1 {font-size: 36px;}
 
 span {color: grey;}
 
-img {width: 150px; 
-    height: 150px;}
+img {width: 180px; 
+    height: 180px;}
 
 section, header {padding: 20px 60px 20px 60px; background-color: white; width: 960px; margin: 0 auto;}
 
 header {display: flex; align-items: center; justify-content: space-between;}
+
+header ul {list-style: none;}
+
+header li {margin-bottom: 15px;}
+
+header address img {width: 16px; height: 16px; background-color: cornflowerblue; margin-right: 10px; padding: 8px; vertical-align: middle; border-radius: 16px;}
