--- a/style.css
+++ b/style.css
@@ -1,20 +1,85 @@
-body {font-family:arial; background-color: aliceblue; padding: 40px 0;}
+body {
+    font-family: arial;
+    background-color: aliceblue;
+    padding: 40px 0;
+}
 
-h2 {font-size: 28px;}
+h2 {
+    font-size: 28px;
+}
 
-h1 {font-size: 36px;}
+h1 {
+    font-size: 36px;
+}
 
-span {color: grey;}
+span {
+    color: grey;
+}
 
-img {width: 180px; 
-    height: 180px;}
+img {}
 
-section, header {padding: 20px 60px 20px 60px; background-color: white; width: 960px; margin: 0 auto;}
+section,
+header {
+    padding: 20px 60px 20px 60px;
+    background-color: white;
+    width: 960px;
+    margin: 0 auto;
+}
 
-header {display: flex; align-items: center; justify-content: space-between;}
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
-header ul {list-style: none;}
+header ul {
+    list-style: none;
+}
 
-header li {margin-bottom: 15px;}
+header li {
+    margin-bottom: 15px;
+}
 
-header address img {width: 16px; height: 16px; background-color: cornflowerblue; margin-right: 10px; padding: 8px; vertical-align: middle; border-radius: 16px;}
+.address-icon {
+    width: 16px;
+    height: 16px;
+    background-color: cornflowerblue;
+    margin-right: 10px;
+    padding: 8px;
+    vertical-align: middle;
+}
+
+.circle {
+    border-radius: 50%;
+}
+
+.profile-picture {
+    width: 180px;
+    height: 180px;
+}
+
+.hobbies {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.hobbies li {
+    width: 50%;
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 40px;
+}
+
+h3 {
+    margin-top: 5px;
+}
+
+.hobbies div {
+    margin-left: 20px;
+}
+
+.hobbies p {color: grey;}
+
+p {line-height: 1.5;}
