--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h2 {
 
 h1 {
     font-size: 36px;
+    margin-bottom: 10px;
 }
 
 span {
@@ -20,10 +21,8 @@ img {}
 
 section,
 header {
-    padding: 20px 60px 20px 60px;
-    background-color: white;
-    width: 960px;
-    margin: 0 auto;
+    padding: 60px 60px 20px 60px;
+  
 }
 
 header {
@@ -36,7 +35,7 @@ header ul {
     list-style: none;
 }
 
-header li {
+li {
     margin-bottom: 15px;
 }
 
@@ -97,6 +96,7 @@ p {
     margin-top: 20px;
     border-radius: 26px;
     transition: background-color 0.5s, color 0.5s;
+    box-shadow: 0 0 20px grey;
 }
 
 .cv-download-link:hover {
@@ -113,3 +113,7 @@ p {
 .cv-download-link:active {
     text-decoration: underline;
 }
+
+.container { box-shadow: 0 0 20px grey;   background-color: white;
+    width: 960px;
+    margin: 0 auto;}
